--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <item
-        android:id="@+id/acercade"
-        android:title="@string/acercade"
+        android:id="@+id/menu_icon"
+        android:icon="@drawable/ic_mario"
         android:orderInCategory="100"
-        app:showAsAction="never" />
+        android:title="@string/menu"
+        app:showAsAction="ifRoom" /><!-- Se muestra si hay espacio -->
 </menu>
