--- a/app/src/main/res/layout/activity_detalles_personaje.xml
+++ b/app/src/main/res/layout/activity_detalles_personaje.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- Definimos un LinearLayout vertical-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
@@ -18,6 +19,7 @@
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
+    <!-- Colocamos la imagen del personaje -->
     <ImageView
         android:id="@+id/imagenPersonaje"
         android:layout_width="wrap_content"
@@ -26,6 +28,7 @@
         android:contentDescription="@string/personaje_imagen"
         android:scaleType="fitCenter" />
 
+    <!-- Colocamos el nombre del personaje -->
     <TextView
         android:id="@+id/nombrePersonaje"
         style="@style/nombrePersonaje"
@@ -34,6 +37,7 @@
         android:layout_gravity="center"
         android:paddingTop="16dp" />
 
+    <!-- Colocamos el título descripción -->
     <TextView
         android:id="@+id/textViewDescripcion"
         style="@style/titulo"
@@ -42,7 +46,7 @@
         android:text="@string/descripcion"
         android:textAlignment="textStart" />
 
-
+    <!-- Colocamos la descripción del personaje -->
     <TextView
         android:id="@+id/descripcionPersonaje"
         style="@style/detallesPersonaje"
@@ -51,6 +55,7 @@
         android:layout_gravity="center"
         android:textSize="14sp" />
 
+    <!-- Colocamos el título Habilidades -->
     <TextView
         android:id="@+id/textViewHabilidades"
         style="@style/titulo"
@@ -58,7 +63,7 @@
         android:layout_height="wrap_content"
         android:text="@string/habilidades" />
 
-
+    <!-- Colocamos las habilidades del personaje -->
     <TextView
         android:id="@+id/habilidadPersonaje"
         style="@style/detallesPersonaje"
@@ -66,6 +71,5 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:textSize="14sp" />
-
 
 </LinearLayout>
