--- a/app/src/main/res/layout/activity_presentacion.xml
+++ b/app/src/main/res/layout/activity_presentacion.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- Colocamos la pantalla de presdentación en un RelativeLayout -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
