--- a/app/src/main/res/layout/item_personaje.xml
+++ b/app/src/main/res/layout/item_personaje.xml
@@ -1,8 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?><!-- Definimos el LinearLayout mediante un estilo-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/LinearLayoutEstilo"
->
+    style="@style/LinearLayoutEstilo">
 
+    <!-- Colocamos la imagen del personaje -->
     <ImageView
         android:id="@+id/imagenPersonaje"
         android:layout_width="60dp"
@@ -10,6 +10,7 @@
         android:layout_marginEnd="16dp"
         android:contentDescription="@string/personaje_imagen" />
 
+    <!-- Colocamos el nombre del personaje -->
     <TextView
         android:id="@+id/nombrePersonaje"
         style="@style/nombrePersonaje"
